--- a/o/of/off/officespace.com.html
+++ b/o/of/off/officespace.com.html
@@ -1,12 +1,13 @@
-<!--The following is the downloaded HTML source of the officespace.com privacy policy that was archived on 2013-08-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130819134934id_/http%3A//www.officespace.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the officespace.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214134431id_/http%3A//www.officespace.com/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html prefix="og: http://ogp.me/ns#"><head><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
 <title>Privacy Policy</title>
 <link href="/favicon.ico" rel="shortcut icon">
 
+<meta content="IE=8" http-equiv="x-ua-compatible">
 <meta content="authenticity_token" name="csrf-param">
-<meta content="nscCYgz6LBY9PTMSBVT6f/T4L1yKHX/asTR2BXz6uXA=" name="csrf-token">
+<meta content="G+Dze9//Ocynu3zRAlXOYsaUCpt2chMgYKovhaFDfDE=" name="csrf-token">
 
 <meta content="website" property="og:type">
 <meta content="OfficeSpace.com" property="og:site_name">
@@ -17,9 +18,9 @@
     [data-hide-until-document-ready]{ visibility: hidden; }
   /*]]>*/
 </style>
-<link href="//d2apc0nnfc3jtp.cloudfront.net/assets/application-20cc2c98432e92dc596071a8c836fc9a.css" media="all" rel="stylesheet" type="text/css">
+<link href="//d2apc0nnfc3jtp.cloudfront.net/assets/application-2900bdf9898ab92b4a2424f2eb1530b1.css" media="all" rel="stylesheet" type="text/css">
 
-<link href="//d2apc0nnfc3jtp.cloudfront.net/assets/print-3a674d96693a09af257a73cd5cc61c6a.css" media="print" rel="stylesheet" type="text/css">
+<link href="//d2apc0nnfc3jtp.cloudfront.net/assets/print-9ad8e841fea15d54af73323919bb524f.css" media="print" rel="stylesheet" type="text/css">
 
 
 <script type="text/javascript">
@@ -54,7 +55,7 @@ var mp_account = '6ac65d8fe4ffc657de74c85a2d9c7453';
 <div class="component flash-messages" id="flash-message"></div>
 <div class="component page-header">
 <div class="container">
-<div class="logo"><a href="/"><img alt="OfficeSpace.com - Home" src="//d2apc0nnfc3jtp.cloudfront.net/assets/components/page_header/logo-2171945596a0d8bc3b0085572f200f2c.png"></a></div>
+<div class="logo"><a href="/"><img alt="OfficeSpace.com - Home" src="//d2apc0nnfc3jtp.cloudfront.net/assets/components/page_header/logo-2114a9126da510cd62c709c50b45758d.png"></a></div>
 <ul class="primary-navigation" data-hide-until-document-ready="true" itemscope="" itemtype="http://schema.org/SiteNavigationElement"><li class="search first" data-dropdown="false"><a href="/" data-current-location="true">Search</a>
 </li><li class="my-officespace" data-dropdown="true"><a href="/" rel="nofollow">For Tenants</a>
 <ul class="dropdown">
@@ -314,7 +315,7 @@ page traffic.
 <li class="terms"><a href="/pages/terms" rel="nofollow">Terms and Conditions</a></li>
 </ul>
 <div class="copyright">
-All Content © 2013 OfficeSpace.com, All Rights Reserved
+All Content © 2014 OfficeSpace.com, All Rights Reserved
 
 </div>
 
@@ -323,9 +324,9 @@ All Content © 2013 OfficeSpace.com, All Rights Reserved
 <a href="https://itunes.apple.com/us/app/find-officespace/id585283543?mt=8">Download our iPhone App</a>
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<script src="//d2apc0nnfc3jtp.cloudfront.net/assets/bootstrap-8b68a80d6343541939eaf813435c3c49.js" type="text/javascript"></script>
+<script src="//d2apc0nnfc3jtp.cloudfront.net/assets/bootstrap-04eaf9eb464cbd767555bd3c5fe75451.js" type="text/javascript"></script>
 
-<script src="//d2apc0nnfc3jtp.cloudfront.net/assets/application-f1711506ba122f35ccc052e36a373d99.js" type="text/javascript"></script>
+<script src="//d2apc0nnfc3jtp.cloudfront.net/assets/application-5cb5b592bbb78b1d13d1f194393047ac.js" type="text/javascript"></script>
 
 
 <script>
@@ -362,6 +363,6 @@ if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-1.newrelic.com","e88de098e8","488724","IlcNQxBfXwgDEBoWVAZdEBgBUUcHDgNZCg==",0,61,new Date().getTime(),"","","","",""]);</script>
+NREUMQ.push(["nrfj","beacon-3.newrelic.com","e88de098e8","488724","IlcNQxBfXwgDEBoWVAZdEBgBUUcHDgNZCg==",0,25,new Date().getTime(),"","","","",""]);</script>
 
 <script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
