--- a/m/mi/min/minitokyo.net.html
+++ b/m/mi/min/minitokyo.net.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the minitokyo.net privacy policy that was archived on 2013-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227133950id_/http%3A//www.minitokyo.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the minitokyo.net privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214143216id_/http%3A//www.minitokyo.net/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <title>Minitokyo Privacy Policy - Minitokyo</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" type="text/css" href="http://static1.minitokyo.net/christmas/christmas.css?41">
+<link rel="stylesheet" type="text/css" href="http://static1.minitokyo.net/default.css?41">
 <style type="text/css">
 ul, ol { margin-left: 3em; } li { line-height: 2em; }</style>
 </head>
@@ -194,7 +194,7 @@ ul, ol { margin-left: 3em; } li { line-height: 2em; }</style>
 	<a href="http://www.desktopanime.com/" rel="nofollow">DA!</a>
 </p>
 <p id="copyright">
-	© 2004-2013 Minitokyo -
+	© 2004-2014 Minitokyo -
 	<a rel="nofollow" href="http://www.minitokyo.net/about">About</a> |
 	<a rel="nofollow" href="http://www.minitokyo.net/faq">FAQ</a> |
 	<a rel="nofollow" href="http://www.minitokyo.net/policy">Terms of Service</a> |
