--- a/t/te/tex/texasroadhouse.com.html
+++ b/t/te/tex/texasroadhouse.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the texasroadhouse.com privacy policy that was archived on 2013-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131203065559id_/http%3A//www.texasroadhouse.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the texasroadhouse.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214144017id_/http%3A//www.texasroadhouse.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><title>
 	Privacy Policy - Steak Restaurant | Texas Roadhouse
-</title><meta http-equiv="content-language" content="en"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta http-equiv="content-type" content="text/html; charset=utf-8"><link href="/img/favicon.ico" type="image/x-icon" rel="Shortcut Icon"><link href="/common/css/style.css?v=5n" rel="stylesheet" type="text/css">
+</title><meta http-equiv="content-language" content="en"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta http-equiv="content-type" content="text/html; charset=utf-8"><link href="/img/favicon.ico" type="image/x-icon" rel="Shortcut Icon"><link href="/common/css/style.css?v=5o" rel="stylesheet" type="text/css">
     <script type="text/javascript" async="" src="https://web.archive.org/web/20140319163420/https://ssl.google-analytics.com/ga.js"></script><script src="/common/javascript/jquery-1.5.2.min.js" type="text/javascript"></script>
     <script src="/common/javascript/common.js" type="text/javascript"></script>
     <script src="/common/javascript/google-analytics.js" type="text/javascript"></script>
@@ -67,7 +67,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ScriptManager1', 'aspnetForm'
         <ul>
             <li class="first"><a class="shop" href="/shop/store">shop</a></li>
             <li><a class="press-room" href="/press-room">press room</a></li>
-            <li><a class="email-club" href="http://assets.fbmta.com/clt/txrdh/lp/join/join_loc.htm" onclick="_gaq.push(['_trackEvent', 'Email Club', 'Click', 'Main Site'])">email club</a></li>
+            <li><a class="email-club" href="http://texasr.fbmta.com/members/UpdateProfile.aspx?Action=Subscribe&amp;InputSource=W" onclick="_gaq.push(['_trackEvent', 'Email Club', 'Click', 'Main Site'])">email club</a></li>
             <li><a class="investors" href="http://investor.texasroadhouse.com/">investors</a></li>
             <li><a class="careers" href="/careers">careers</a></li>
             <li><a class="international" href="/international/overview">international</a></li>
@@ -361,7 +361,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ScriptManager1', 'aspnetForm'
     <a href="http://www.twitter.com/texasroadhouse" target="_blank" onclick="_gaq.push(['_trackEvent', 'Footer', 'Link', 'Twitter']);"><img src="/img/icons/twitter-icon-small.png" alt="Twitter"></a>
     <a href="http://pinterest.com/TexasRoadhouse/boards/" target="_blank" onclick="_gaq.push(['_trackEvent', 'Footer', 'Link', 'Pinterest']);"><img src="/img/icons/pinterest-icon-small.png" alt="Pinterest"></a>
 </span>
-<div id="copyright">©2013 Texas Roadhouse, Inc.</div>
+<div id="copyright">©2014 Texas Roadhouse, Inc.</div>
                             
                         </div>                        
                     </div>
