--- a/e/es/esa/esalon.com.html
+++ b/e/es/esa/esalon.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the esalon.com privacy policy that was archived on 2013-08-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130810014541id_/http%3A//www.esalon.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the esalon.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214144925id_/http%3A//www.esalon.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="https://www.facebook.com/2008/fbml"><!--<![endif]--><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="https://www.facebook.com/2008/fbml"><!--<![endif]--><head><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-6JQL"></script><script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js"></script><script type="text/javascript" async="" src="https://cdn.mxpnl.com/libs/mixpanel-2.1.min.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function a(b,c,d){function e(f){if(!c[f]){var g=c[f]={exports:{}};b[f][0].call(g.exports,function(a){var c=b[f][1][a];return e(c?c:a)},g,g.exports,a,b,c,d)}return c[f].exports}for(var f=0;f<d.length;f++)e(d[f]);return e}({"4O2Y62":[function(a,b){function c(a,b){var c=d[a];return c?c.apply(this,b):(e[a]||(e[a]=[]),void e[a].push(b))}var d={},e={};b.exports=c,c.queues=e,c.handlers=d},{}],handle:[function(a,b){b.exports=a("4O2Y62")},{}],YLUGVp:[function(a,b){function c(){var a=m.info=NREUM.info;if(a&&a.agent&&a.licenseKey&&a.applicationID){m.proto="https"===l.split(":")[0]||a.sslForHttp?"https://":"http://",g("mark",["onload",f()]);var b=i.createElement("script");b.src=m.proto+a.agent,i.body.appendChild(b)}}function d(){"complete"===i.readyState&&e()}function e(){g("mark",["domContent",f()])}function f(){return(new Date).getTime()}var g=a("handle"),h=window,i=h.document,j="addEventListener",k="attachEvent",l=(""+location).split("?")[0],m=b.exports={offset:f(),origin:l};i[j]?(i[j]("DOMContentLoaded",e,!1),h[j]("load",c,!1)):(i[k]("onreadystatechange",d),h[k]("onload",c)),g("mark",["firstbyte",f()])},{handle:"4O2Y62"}],loader:[function(a,b){b.exports=a("YLUGVp")},{}]},{},["YLUGVp"]);</script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta property="fb:app_id" content="148940558480674">
 <meta property="fb:page_id" content="119115358133249">
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=1080">
 <meta property="og:description" content="eSalon provides salon quality, at-home haircolor at a price you can afford. Get colorist formulated hair color designed specifically for your hair, have it bottled at our Los Angeles color lab and shipped to you. It's easy and convenient with results that speak for themselves.">
    <title>eSalon.com | Privacy Policy</title>
-<meta name="description" content="eSalon provides salon quality, at-home haircolor at a price you can afford.   Get colorist formulated hair color designed specifically for your hair, have it bottled at our Los Angeles color lab and shipped to you. It's easy and convenient with results that speak for themselves."><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-6JQL"></script><script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js"></script><script type="text/javascript" async="" src="https://cdn.mxpnl.com/libs/mixpanel-2.1.min.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script><script type="text/javascript" src="//use.typekit.net/igh3sgm.js"></script>
+<meta name="description" content="eSalon provides salon quality, at-home haircolor at a price you can afford.   Get colorist formulated hair color designed specifically for your hair, have it bottled at our Los Angeles color lab and shipped to you. It's easy and convenient with results that speak for themselves."><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script><script type="text/javascript" src="//use.typekit.net/igh3sgm.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <script src="//cdn.optimizely.com/js/87580399.js"></script><script type="text/javascript">
   var _gaq = _gaq || [];
@@ -44,13 +44,21 @@ _gaq.push(['_trackPageLoadTime']);
   a._i.push([b,c,f])};a.__SV=1.1;})(document,window.mixpanel||[]);
   mixpanel.init("70bc8fde765d819233162a4655c62c1e");
  </script>
-<!--[if lte IE 8]>
+<!-- RetentionScience start -->
+<script type="text/javascript">
+   var _rsq = _rsq || [];
+_rsq.push(['_setSiteId', '166']);
+_rsq.push(['_track']);
 
-	<link rel="stylesheet" type="text/css" href="/css/v2_page.css?1374712213" />
+(function() { var rScix = document.createElement('script'); rScix.type = 'text/javascript'; rScix.async = true; rScix.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'd1stxfv94hrhia.cloudfront.net/waves/v2/w.js'; (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(rScix); })();
+</script><script type="text/javascript" async="" src="https://d1stxfv94hrhia.cloudfront.net/waves/v2/w.js"></script>
+<!-- RetentionScience end --><!--[if lte IE 8]>
+
+	<link rel="stylesheet" type="text/css" href="/css/v2_page.css?1385528526" />
 <![endif]-->
 <!--[if gte IE 9]><!-->
 
-	<link rel="stylesheet" type="text/css" href="http://static.esalon.com/css/v2_page._ts1374712213.css">
+	<link rel="stylesheet" type="text/css" href="http://static.esalon.com/css/v2_page._ts1385528526.css">
 <!--<![endif]-->
 
 	<script type="text/javascript" src="http://static.esalon.com/js/v2/jquery.easing-1.3._ts1372117907.js"></script>
@@ -167,10 +175,10 @@ privacy@esalon.com<br>
 </section>
 
 <footer>
-      <div id="help">For question, coloring help, and tips, please check out the <a href="/support">Support Section</a></div>
+      <div id="help">For questions, coloring help, and tips, please check out the <a href="/support">Support Section</a></div>
       <div id="sitelinks"><a href="/about">About</a> | <a href="/blog">Blog</a> | <a href="/jobs">Careers</a> | <a href="/press">Press</a> | <a href="/support">Support</a></div>
       <div id="copyright">
-        Copyright eSalon 2013 All Rights Reserved <a href="/terms">Terms of Use</a> | <a href="/privacy">Privacy Policy</a>  
+        Copyright eSalon 2014 All Rights Reserved <a href="/terms">Terms of Use</a> | <a href="/privacy">Privacy Policy</a>  
         <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2FeSalon.com&amp;layout=button_count&amp;show_faces=false&amp;width=93&amp;action=like&amp;colorscheme=light&amp;height=20" scrolling="no" frameborder="0" style="border:none; position:relative; top:7px; overflow:hidden; width:93px; height:20px;" allowtransparency="true"></iframe>
       </div>
 </footer>
@@ -186,7 +194,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-6JQL');</script>
 <!-- End Google Tag Manager -->
-  
+  <script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"beacon-1.newrelic.com","licenseKey":"b1e8da1e19","applicationID":"537215","transactionName":"M10BNUZVVxAABkQNWgoXIBRHQFYOThVCDUMFWxo=","queueTime":0,"applicationTime":20,"ttGuid":"","agentToken":"","userAttributes":"","errorBeacon":"jserror.newrelic.com","agent":"js-agent.newrelic.com\/nr-314.min.js"}</script>
 
 <script type="text/javascript">
 $(document).ready(function() {
@@ -260,4 +268,4 @@ $(document).ready(function() {
 				}
 });
 </script>
-</body></html>
+<script src="https://js-agent.newrelic.com/nr-314.min.js"></script></body></html>
