--- a/b/ba/bab/babynames.com.html
+++ b/b/ba/bab/babynames.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the babynames.com privacy policy that was archived on 2013-10-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131023012638id_/http%3A//www.babynames.com/user/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the babynames.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214150254id_/http%3A//www.babynames.com/user/privacy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 		<script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=131910906886660"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript">
 		var googletag = googletag || {};
 		googletag.cmd = googletag.cmd || [];
@@ -49,10 +49,10 @@
 <script type="text/javascript">
 	var note = new Array();
 	
-	note[9] = 'Check it out! New column: <a href=\"http://www.babynames.com/baby-blog/baby-tech/\">BABY TECH - Good Gadgets for Great Parenting!</a>'; 
+	note[10] = 'Sign up for the <a href=\"/newsletter/\">BabyNames Newsletter</a> for weekly celebrity baby news, baby name trends, baby product news and more! <a href=\"/newsletter/\">More info...</a>'; 
 
 	function dismissAnnouncement() {
-		$.ajax({ url:'/_assets/servlets/announcement_view.php', data:'aid=9', type:'POST' });
+		$.ajax({ url:'/_assets/servlets/announcement_view.php', data:'aid=10', type:'POST' });
 		$('div#announcement').slideUp(333); 
 	}
 	
@@ -72,7 +72,7 @@
 			dismissAnnouncement();
 		});
 	
-		setTimeout(function() {showAnnouncement(9, 9);},2000);
+		setTimeout(function() {showAnnouncement(10, 14);},2000);
 	});
 
 </script><script src="https://c.compete.com/bootstrap/6e2400b3e0e5f1fa24265c2742b9ac9a/bootstrap.js" type="text/javascript" async=""></script></head>
@@ -166,36 +166,36 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1361392150881-0');
 	<div id="nav">
 	<h2 class="first">all about names</h2>
 					<ul>
-						<li><a href="http://www.babynames.com/Names/search.php">Search Baby Names</a></li>
-						<li><a href="http://www.babynames.com/Names/Popular/">Most Popular Names</a></li>
-						<li><a href="http://www.babynames.com/boy-names/">Boy Names</a></li>
-						<li><a href="http://www.babynames.com/girl-names/">Girl Names</a></li>
-						<li><a href="http://www.babynames.com/Names/Celebrities/">Celebrity Real Names</a></li>
-						<li><a href="http://www.babynames.com/Names/Celebrities/celebrity-baby-names.php">Celebrity Baby Names</a></li>
+						<li><a href="/Names/search.php">Search Baby Names</a></li>
+						<li><a href="/Names/Popular/">Most Popular Names</a></li>
+						<li><a href="/boy-names/">Boy Names</a></li>
+						<li><a href="/girl-names/">Girl Names</a></li>
+						<li><a href="/Names/Celebrities/">Celebrity Real Names</a></li>
+						<li><a href="/Names/Celebrities/celebrity-baby-names.php">Celebrity Baby Names</a></li>
 						<li><a href="http://www.petbabynames.com/" target="_blank">Pet Names</a></li>
-						<li><a href="http://www.babynames.com/NSI/">Cool Name Lists</a></li>
-						<li><a href="http://www.babynames.com/Names/glossary.php">Name Glossary</a></li>
+						<li><a href="/NSI/">Cool Name Lists</a></li>
+						<li><a href="/Names/glossary.php">Name Glossary</a></li>
 					</ul>
 			
 	<h2>info &amp; advice</h2>
 					<ul>
-						<li><a href="http://www.babynames.com/boards/">Message Boards</a>
-							<div class="subtext">join the BN community</div></li>
-						<li><a href="http://www.babynames.com/blogs/ask-babynames/">Ask BabyNames.com</a><div class="subtext">with Jennifer Moss</div></li>
-						<li><a href="http://www.babynames.com/baby-name-book.php">Baby Names Book!</a></li>
-						<li><a href="http://www.babynames.com/character-names.php">Tips for Writers</a><div class="subtext">naming your characters</div></li>
-						<li><a href="http://www.babynames.com/consulting/">Name Suggestion Service</a></li>
+						<li><a href="/boards/">Member Community</a>
+						</li><li><a href="/baby-name-book.php">Baby Names Book!</a></li>
+						<li><a href="/character-names.php">Tips for Writers</a><div class="subtext">naming your characters</div></li>
+						<li><a href="/newsletter/">BabyNames Newsletter</a></li>
 					</ul>
 
 	<h2>blogs</h2>
 			<ul>
-						<li><a href="http://www.babynames.com/blogs/celebrities/">Celebrity Baby Blog</a>
+						<li><a href="/blogs/celebrities/">Celebrity Baby Blog</a>
 							<div class="subtext">baby and pregnancy news</div></li>
-						<li><a href="http://www.babynames.com/blogs/baby-tech/">Baby Tech</a>
+						<li><a href="/blogs/ask-babynames/">Ask BabyNames.com</a>
+							<div class="subtext">name Q&amp;A with our founder</div></li>
+						<li><a href="/blogs/baby-tech/">Baby Tech</a>
 							<div class="subtext">cool gadgets for parents</div></li>
-						<li><a href="http://www.babynames.com/blogs/shear-insanity/">Shear Insanity</a>
-							<div class="subtext">mommy blog</div></li>
-						<li><a href="http://www.babynames.com/blogs/pop/">Non-stop Pop</a>
+						<li><a href="/blogs/book-reviews/">A Little Book Blog</a>
+							<div class="subtext">children's book reviews</div></li>
+						<li><a href="/blogs/pop/">Non-stop Pop</a>
 							<div class="subtext">daddy blog</div></li>
 
 
@@ -203,28 +203,19 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1361392150881-0');
 
 	<h2>fun stuff</h2>
 					<ul>						
-						<li><a href="http://www.babynames.com/video/">Video Library</a><div class="subtext">collection of How To videos</div></li>
-						<li><a href="http://www.babynames.com/games/">Play Games</a></li>
-						<li><a href="http://www.babynames.com/Names/rename.php">Random Renamer</a></li>
-						<li><a href="http://www.babynames.com/baby-shower-games.php">Baby Shower Games</a></li>
-						<li><a href="http://www.babynames.com/features/due-date-calculator.php">Due Date Calculator</a></li>
+						<li><a href="/video/">Video Library</a><div class="subtext">collection of How To videos</div></li>
+						<li><a href="/Names/rename.php">Random Renamer</a></li>
+						<li><a href="/baby-shower-games.php">Baby Shower Games</a></li>
+						<li><a href="/features/due-date-calculator.php">Due Date Calculator</a></li>
 
 					</ul>
 
-<!--	<h2>shopping</h2>
+<!-- <h2>shopping</h2>
 
-	<ul style="text-align:center;">
 
-	<iframe src="http://rcm-na.amazon-adsystem.com/e/cm?t=babynamesover300&o=1&p=21&l=ur1&category=babyregistry&banner=1JPQ1GY9K5DFWZ501302&f=ifr" width="125" height="125" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
-
-	<a href="http://store.yahoo.com/cgi-bin/clink?early-pregnancy-tests+xRt5N8+index.html+" target="_blank"><img src="_assets/img/ept.png" border="0"></a>
-
-	<a href="http://store.yahoo.com/cgi-bin/clink?early-pregnancy-tests+xRt5N8+pacof3ovtess.html+" target="_blank"><img src="_assets/img/ovu.PNG" border="0"></a>
 
 	</ul>
 -->
-
-
                
 	<div style="height:30px; background:#01AEEE; border:none !important;"></div>
 
@@ -327,7 +318,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1361392150881-0');
 	}
 </style>
 					
-	<div id="box-login">
+<div id="box-login">
 
 <!-- IF ALREADY LOGGED IN -->
 							<div id="login-box-form">
@@ -337,10 +328,8 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1361392150881-0');
 						<h2>member login</h2>
 						<div><label for="login-email">email:</label><input id="login-email" class="txt-input" type="text" name="user_email"></div>
 						<div><label for="login-password">password:</label><input id="login-password" class="txt-input" type="password" name="user_password"></div>
-<!-- FACEBOOK LOGIN
-						<div style="float:left;width:39%;margin-top:.5em;"><fb:login-button size="small" perms="email,user_birthday,user_location">Sign in</fb:login-button></div>
--->
-						<div style="text-align:left;"><input id="login-remember" type="checkbox" name="rem" value="yes"><label class="remember" for="login-remember">remember me</label><br><input name="submit" class="button rounded small blue" type="submit" value="Sign in" alt="Sign in to Babynames.com"></div>
+						<div style="display:inline; float:left; text-align:left;margin-top:5px;"><input id="login-remember" type="checkbox" name="rem" value="yes"><label class="remember" for="login-remember">stay logged in</label></div>
+						<div style="display:inline; float:right;margin:5px 20px 0px 0px;"><input name="submit" class="button rounded small blue" type="submit" value="Sign in" alt="Sign in to Babynames.com"></div>
 					</form>
 					</div>
 				</div>
@@ -348,17 +337,17 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1361392150881-0');
 						<h2>friends of BabyNames.com</h2>
 <ul>
 
-	<li><a href="http://store.yahoo.com/cgi-bin/clink?early-pregnancy-tests+xRt5N8+index.html+" target="_blank" title="Early Pregnancy Tests">Early Pregnancy Tests</a></li> 
-	
-	<li><a href="http://www.amazon.com/gp/baby/homepage?tag=babynamesover300" target="_blank" title="Amazon Baby Registry">Amazon Baby Registry</a></li> 
+
+	<li><a href="http://characternames.com/" target="_blank" title="Character Names">Character Names</a></li> 
+
+	<li><a href="http://craiggruenberg.bandcamp.com/" target="_blank" title="Baby Sleep Music" rel="nofollow">Baby Sleep Music</a></li> 
 
 
-	<li><a href="http://www.memebooks.com" target="_blank" title="Personalized Storybooks">Personalized Storybooks</a></li>
+	<li><a href="http://www.amazon.com/gp/baby/homepage?tag=babynamesover300" target="_blank" title="Amazon Baby Registry" rel="nofollow">Amazon Baby Registry</a></li> 
 
+	<li><a href="http://store.yahoo.com/cgi-bin/clink?early-pregnancy-tests+xRt5N8+index.html+" target="_blank" title="Early Pregnancy Tests" rel="nofollow">Early Pregnancy Tests</a></li> 
 
 	<li><a href="http://www.slashedbeauty.com" target="_blank" title="Beauty on a Budget">Beauty on a Budget</a></li>
-
-	<li><a href="http://www.babyearth.com/organic-baby-products.html" target="_blank" title="Organic baby products">Organic Baby Products</a></li>
 
 
 </ul>
@@ -371,7 +360,10 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1361411869678-0');
 					<p>&nbsp;</p>
 
 <!-- AMAZON BABY REGISTRY -->
-<iframe src="http://rcm-na.amazon-adsystem.com/e/cm?t=babynamesover300&amp;o=1&amp;p=14&amp;l=ur1&amp;category=babyregistryexclusive&amp;banner=1HTF9E49MKZ2CJRS4ZR2&amp;f=ifr" width="160" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+
+<iframe src="http://rcm-na.amazon-adsystem.com/e/cm?t=babynamesover300&amp;o=1&amp;p=14&amp;l=ur1&amp;category=valentines&amp;banner=0X58FVQFNHEN89CY5QR2&amp;f=ifr" width="160" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+
+<!--<iframe src="http://rcm-na.amazon-adsystem.com/e/cm?t=babynamesover300&o=1&p=14&l=ur1&category=babyregistryexclusive&banner=1HTF9E49MKZ2CJRS4ZR2&f=ifr" width="160" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>-->
 
 
 					</div>
@@ -391,7 +383,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1361411869678-0');
 			<a href="http://www.babynames.com/user/privacy.php">Privacy Policy</a> | 
 			<a href="http://www.babynames.com/user/terms.php">Terms of Service</a> | 
 			<a href="http://www.babynames.com/about/feedback.php">Contact Us</a>
-			<div class="copyright">All site content © 1996-2013 BabyNames.com LLC - All Rights Reserved</div>
+			<div class="copyright">All site content © 1996-2014 BabyNames.com LLC - All Rights Reserved</div>
 		</div>
 	</div>
 </div>     
