--- a/i/iv/ivi/ivisit.com.html
+++ b/i/iv/ivi/ivisit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ivisit.com privacy policy that was archived on 2013-09-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130922061709id_/http%3A//www.ivisit.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ivisit.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214151102id_/http%3A//www.ivisit.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta content="en-us" http-equiv="Content-Language">
@@ -36,9 +36,6 @@
 			</li>
 			<li>
 				<a class="nav" href="/aboutus" target="_top">About Us</a>
-			</li>
-			<li>
-				<a class="nav" href="/contact" target="_top">Contact</a>
 			</li>
 		</ul>
 	</div>	</div>
@@ -108,8 +105,7 @@
 <div class="footer_table_bottom">
 	<img height="22" src="/images/maintable_solid_03.png" width="950">
 </div>
-<div class="footer_links"><a class="footer" href="/">Home</a> | 
-	<a class="footer" href="/contact">Contact</a> | <a class="footer" href="/privacy">Privacy Policy</a> | <a class="footer" href="/terms">Terms of Use</a></div>
+<div class="footer_links"><a class="footer" href="/">Home</a> | <a class="footer" href="/privacy">Privacy Policy</a> | <a class="footer" href="/terms">Terms of Use</a></div>
 <div class="footer_copyright">Copyright © 1997-2011 iVisit, LLC. All Rights Reserved.</div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
